# flexicache

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: flexicache.hpp
src/: main.cpp
tests/: tests.cpp
